force-app/main/default/objects/CommercientSF__Syspro_StockCode_Long_Description__c/CommercientSF__Syspro_StockCode_Long_Description__c.object-meta.xml
<CustomObject>
    <label>Syspro StockCode Long Description</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro StockCode Long Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>