force-app/main/default/objects/CommercientSF__Syspro_StockCode_Long_Description__c/fields/CommercientSF__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Long_Description__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>