force-app/main/default/objects/CommercientSF__Syspro_StockCode_Long_Description__c/fields/CommercientSF__Product__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Syspro StockCode Long Description</relationshipLabel>
    <relationshipName>Syspro_StockCode_Long_Description</relationshipName>
    <type>Lookup</type>
</CustomField>