force-app/main/default/objects/CommercientSF__Syspro_StockCode_Long_Description__c/fields/CommercientSF__StockCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>StockCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>